fix overflow issue

--- a/css/style.scss
+++ b/css/style.scss
@@ -21,7 +21,7 @@ p {
 
     width: 100%;
     height: 100%;
-    
+
     background-color: rgba(black, 0.5);
   }
 
@@ -37,6 +37,7 @@ p {
 html {
   position: relative;
   min-height: 100%;
+  overflow-x: hidden;
 }
 body {
   margin-top: 56px !important;
